[package]
name = "rust-mqtt-repeater"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
rumqttc = "0.9.0"
rustls = "0.19.1"
rustls-native-certs = "0.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
clap = "2.33.3"

[profile.release]
lto = true
codegen-units = 1